Fixing remaining whatsnew issues (#1676)
* initial fix
* powrap
* arreglado errores del CI

--- a/whatsnew/2.1.po
+++ b/whatsnew/2.1.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
 "PO-Revision-Date: 2021-08-07 09:59+0100\n"
 "Last-Translator: Claudia Millan <clmilneb@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../Doc/whatsnew/2.1.rst:3
@@ -38,7 +38,6 @@ msgid "Introduction"
 msgstr "Introducción"
 
 #: ../Doc/whatsnew/2.1.rst:15
-#, fuzzy
 msgid ""
 "This article explains the new features in Python 2.1.  While there aren't as "
 "many changes in 2.1 as there were in Python 2.0, there are still some "
@@ -85,7 +84,6 @@ msgid "PEP 227: Nested Scopes"
 msgstr "PEP 227: Ámbitos anidados"
 
 #: ../Doc/whatsnew/2.1.rst:38
-#, fuzzy
 msgid ""
 "The largest change in Python 2.1 is to Python's scoping rules.  In Python "
 "2.0, at any given time there are at most three namespaces used to look up "
@@ -101,7 +99,6 @@ msgstr ""
 "función recursiva anidada no funciona::"
 
 #: ../Doc/whatsnew/2.1.rst:51
-#, fuzzy
 msgid ""
 "The function :func:`g` will always raise a :exc:`NameError` exception, "
 "because the binding of the name ``g`` isn't in either its local namespace or "
@@ -130,7 +127,6 @@ msgstr ""
 "sufre mucho como resultado."
 
 #: ../Doc/whatsnew/2.1.rst:68
-#, fuzzy
 msgid ""
 "The most significant change to Python 2.1 is that static scoping has been "
 "added to the language to fix this problem.  As a first effect, the "
@@ -166,7 +162,6 @@ msgstr ""
 "código habría sido bastante confuso de leer en primer lugar."
 
 #: ../Doc/whatsnew/2.1.rst:83
-#, fuzzy
 msgid ""
 "One side effect of the change is that the ``from module import *`` and "
 "``exec`` statements have been made illegal inside a function scope under "
@@ -222,7 +217,6 @@ msgstr ""
 "signo de un mal diseño de todos modos)."
 
 #: ../Doc/whatsnew/2.1.rst:113
-#, fuzzy
 msgid ""
 "Compatibility concerns have led to nested scopes being introduced gradually; "
 "in Python 2.1, they aren't enabled by default, but can be turned on within a "
@@ -253,7 +247,6 @@ msgid "PEP 236: __future__ Directives"
 msgstr "PEP 236: Directivas __future__"
 
 #: ../Doc/whatsnew/2.1.rst:132
-#, fuzzy
 msgid ""
 "The reaction to nested scopes was widespread concern about the dangers of "
 "breaking code with the 2.1 release, and it was strong enough to make the "
@@ -269,7 +262,6 @@ msgstr ""
 "obligatoria en la versión N+1."
 
 #: ../Doc/whatsnew/2.1.rst:138
-#, fuzzy
 msgid ""
 "The syntax uses a ``from...import`` statement using the reserved module "
 "name :mod:`__future__`.  Nested scopes can be enabled by the following "
@@ -280,7 +272,6 @@ msgstr ""
 "mediante la siguiente sentencia::"
 
 #: ../Doc/whatsnew/2.1.rst:143
-#, fuzzy
 msgid ""
 "While it looks like a normal :keyword:`import` statement, it's not; there "
 "are strict rules on where such a future statement can be put. They can only "
@@ -311,7 +302,6 @@ msgid "PEP 207: Rich Comparisons"
 msgstr "PEP 207: Comparaciones Enriquecidas"
 
 #: ../Doc/whatsnew/2.1.rst:162
-#, fuzzy
 msgid ""
 "In earlier versions, Python's support for implementing comparisons on user-"
 "defined classes and extension types was quite simple. Classes could "
@@ -340,7 +330,6 @@ msgstr ""
 "comparador tiene que ser capaz de lanzar una excepción para señalar el error."
 
 #: ../Doc/whatsnew/2.1.rst:174
-#, fuzzy
 msgid ""
 "In Python 2.1, rich comparisons were added in order to support this need. "
 "Python classes can now individually overload each of the ``<``, ``<=``, "
@@ -409,7 +398,6 @@ msgid ":meth:`__ne__`"
 msgstr ":meth:`__ne__`"
 
 #: ../Doc/whatsnew/2.1.rst:194
-#, fuzzy
 msgid ""
 "(The magic methods are named after the corresponding Fortran operators ``.LT."
 "``. ``.LE.``, &c.  Numeric programmers are almost certainly quite familiar "
@@ -421,7 +409,6 @@ msgstr ""
 "fáciles de recordar.)"
 
 #: ../Doc/whatsnew/2.1.rst:198
-#, fuzzy
 msgid ""
 "Each of these magic methods is of the form ``method(self, other)``, where "
 "``self`` will be the object on the left-hand side of the operator, while "
@@ -435,7 +422,6 @@ msgstr ""
 "__lt__(B)``."
 
 #: ../Doc/whatsnew/2.1.rst:203
-#, fuzzy
 msgid ""
 "Each of these magic methods can return anything at all: a Boolean, a matrix, "
 "a list, or any other Python object.  Alternatively they can raise an "
@@ -448,7 +434,6 @@ msgstr ""
 "no tiene sentido."
 
 #: ../Doc/whatsnew/2.1.rst:207
-#, fuzzy
 msgid ""
 "The built-in ``cmp(A,B)`` function can use the rich comparison machinery, "
 "and now accepts an optional argument specifying which comparison operation "
@@ -467,7 +452,6 @@ msgstr ""
 "método apropiado y puede retornar cualquier objeto de Python."
 
 #: ../Doc/whatsnew/2.1.rst:214
-#, fuzzy
 msgid ""
 "There are also corresponding changes of interest to C programmers; there's a "
 "new slot ``tp_richcmp`` in type objects and an API for performing a given "
@@ -498,7 +482,6 @@ msgid "PEP 230: Warning Framework"
 msgstr "PEP 230: Marco de advertencia"
 
 #: ../Doc/whatsnew/2.1.rst:232
-#, fuzzy
 msgid ""
 "Over its 10 years of existence, Python has accumulated a certain number of "
 "obsolete modules and features along the way.  It's difficult to know when a "
@@ -523,7 +506,6 @@ msgstr ""
 "completo para eliminar los usos de la antigua característica."
 
 #: ../Doc/whatsnew/2.1.rst:242
-#, fuzzy
 msgid ""
 "Python 2.1 adds the warning framework to be used in this scheme.  It adds a :"
 "mod:`warnings` module that provide functions to issue warnings, and to "
@@ -560,7 +542,6 @@ msgstr ""
 "parámetros opcionales para especificar una categoría de advertencia concreta."
 
 #: ../Doc/whatsnew/2.1.rst:263
-#, fuzzy
 msgid ""
 "Filters can be added to disable certain warnings; a regular expression "
 "pattern can be applied to the message or to the module name in order to "
@@ -576,7 +557,6 @@ msgstr ""
 "suprimirse llamando a ::"
 
 #: ../Doc/whatsnew/2.1.rst:275
-#, fuzzy
 msgid ""
 "This adds a filter that will apply only to warnings of the class :class:"
 "`DeprecationWarning` triggered in the :mod:`__main__` module, and applies a "
@@ -609,7 +589,6 @@ msgid ":pep:`5` - Guidelines for Language Evolution"
 msgstr ":pep:`5` - Directrices para la evolución del lenguaje"
 
 #: ../Doc/whatsnew/2.1.rst:290
-#, fuzzy
 msgid ""
 "Written by Paul Prescod, to specify procedures to be followed when removing "
 "old features from Python.  The policy described in this PEP hasn't been "
@@ -650,7 +629,6 @@ msgstr ""
 "Python no suelen contener todos los módulos útiles que podrían."
 
 #: ../Doc/whatsnew/2.1.rst:310
-#, fuzzy
 msgid ""
 "Python 2.0 added the Distutils, a set of modules for distributing and "
 "installing extensions.  In Python 2.1, the Distutils are used to compile "
@@ -665,7 +643,6 @@ msgstr ""
 "instalaciones de Python sean más fáciles y tengan más funciones."
 
 #: ../Doc/whatsnew/2.1.rst:316
-#, fuzzy
 msgid ""
 "Instead of having to edit the :file:`Modules/Setup` file in order to enable "
 "modules, a :file:`setup.py` script in the top directory of the Python source "
@@ -688,7 +665,6 @@ msgstr ""
 "plataforma específica."
 
 #: ../Doc/whatsnew/2.1.rst:325
-#, fuzzy
 msgid ""
 "In another far-reaching change to the build mechanism, Neil Schemenauer "
 "restructured things so Python now uses a single makefile that isn't "
@@ -727,7 +703,6 @@ msgstr ""
 "programador de Python."
 
 #: ../Doc/whatsnew/2.1.rst:347
-#, fuzzy
 msgid ""
 "Storing a reference to an object (say, in a dictionary or a list) has the "
 "side effect of keeping that object alive forever.  There are a few specific "
@@ -767,7 +742,6 @@ msgstr ""
 "memoria, esto puede ser un problema."
 
 #: ../Doc/whatsnew/2.1.rst:374
-#, fuzzy
 msgid ""
 "Weak references provide a way to implement a cache that won't keep objects "
 "alive beyond their time.  If an object is only accessible through weak "
@@ -796,7 +770,6 @@ msgstr ""
 "mantenga objetos vivos, almacenando referencias débiles en la caché. ::"
 
 #: ../Doc/whatsnew/2.1.rst:400
-#, fuzzy
 msgid ""
 "The :mod:`weakref` module also allows creating proxy objects which behave "
 "like weak references --- an object referenced only by proxy objects is "
@@ -827,7 +800,6 @@ msgid "PEP 232: Function Attributes"
 msgstr "PEP 232: Atributos de la función"
 
 #: ../Doc/whatsnew/2.1.rst:425
-#, fuzzy
 msgid ""
 "In Python 2.1, functions can now have arbitrary information attached to "
 "them. People were often using docstrings to hold information about functions "
@@ -905,7 +877,6 @@ msgstr ""
 "original (también preservan las mayúsculas)."
 
 #: ../Doc/whatsnew/2.1.rst:468
-#, fuzzy
 msgid ""
 "In Python 2.1, the :keyword:`import` statement will work to simulate case-"
 "sensitivity on case-insensitive platforms.  Python will now search for the "
@@ -954,7 +925,6 @@ msgid "PEP 208: New Coercion Model"
 msgstr "PEP 208: Nuevo modelo de coerción"
 
 #: ../Doc/whatsnew/2.1.rst:511
-#, fuzzy
 msgid ""
 "How numeric coercion is done at the C level was significantly modified.  "
 "This will only affect the authors of C extensions to Python, allowing them "
@@ -966,7 +936,6 @@ msgstr ""
 "de extensión que soporten operaciones numéricas."
 
 #: ../Doc/whatsnew/2.1.rst:515
-#, fuzzy
 msgid ""
 "Extension types can now set the type flag ``Py_TPFLAGS_CHECKTYPES`` in their "
 "``PyTypeObject`` structure to indicate that they support the new coercion "
@@ -1004,7 +973,6 @@ msgid ":pep:`208` - Reworking the Coercion Model"
 msgstr ":pep:`208` - Reformulación del modelo de coerción"
 
 #: ../Doc/whatsnew/2.1.rst:533
-#, fuzzy
 msgid ""
 "Written and implemented by Neil Schemenauer, heavily based upon earlier work "
 "by Marc-André Lemburg.  Read this to understand the fine points of how "
@@ -1019,7 +987,6 @@ msgid "PEP 241: Metadata in Python Packages"
 msgstr "PEP 241: Metadatos en paquetes de Python"
 
 #: ../Doc/whatsnew/2.1.rst:543
-#, fuzzy
 msgid ""
 "A common complaint from Python users is that there's no single catalog of "
 "all the Python modules in existence.  T. Middleton's Vaults of Parnassus at "
@@ -1033,7 +1000,6 @@ msgstr ""
 "gente no se molesta."
 
 #: ../Doc/whatsnew/2.1.rst:548
-#, fuzzy
 msgid ""
 "As a first small step toward fixing the problem, Python software packaged "
 "using the Distutils :command:`sdist` command will include a file named :file:"
@@ -1063,7 +1029,6 @@ msgstr ""
 "paquete a un servidor de catálogos."
 
 #: ../Doc/whatsnew/2.1.rst:561
-#, fuzzy
 msgid ""
 "You can start creating packages containing :file:`PKG-INFO` even if you're "
 "not using Python 2.1, since a new release of the Distutils will be made for "
@@ -1100,7 +1065,6 @@ msgid "New and Improved Modules"
 msgstr "Módulos nuevos y mejorados"
 
 #: ../Doc/whatsnew/2.1.rst:583
-#, fuzzy
 msgid ""
 "Ka-Ping Yee contributed two new modules: :mod:`inspect.py`, a module for "
 "getting information about live Python code, and :mod:`pydoc.py`, a module "
@@ -1117,7 +1081,6 @@ msgstr ""
 "o clase de Python. Por ejemplo, ``pydoc xml.dom`` muestra lo siguiente::"
 
 #: ../Doc/whatsnew/2.1.rst:605
-#, fuzzy
 msgid ""
 ":file:`pydoc` also includes a Tk-based interactive help browser.   :file:"
 "`pydoc` quickly becomes addictive; try it out!"
@@ -1126,7 +1089,6 @@ msgstr ""
 "Tk. :file:`pydoc` se vuelve rápidamente adictivo; ¡pruébalo!"
 
 #: ../Doc/whatsnew/2.1.rst:608
-#, fuzzy
 msgid ""
 "Two different modules for unit testing were added to the standard library. "
 "The :mod:`doctest` module, contributed by Tim Peters, provides a testing "
@@ -1146,7 +1108,6 @@ msgstr ""
 "obtener más información sobre PyUnit."
 
 #: ../Doc/whatsnew/2.1.rst:616
-#, fuzzy
 msgid ""
 "The :mod:`difflib` module contains a class, :class:`SequenceMatcher`, which "
 "compares two sequences and computes the changes required to transform one "
@@ -1163,7 +1124,6 @@ msgstr ""
 "escribir un script de este tipo."
 
 #: ../Doc/whatsnew/2.1.rst:622
-#, fuzzy
 msgid ""
 ":mod:`curses.panel`, a wrapper for the panel library, part of ncurses and of "
 "SYSV curses, was contributed by Thomas Gellekum.  The panel library provides "
@@ -1179,7 +1139,6 @@ msgstr ""
 "superponen los paneles y qué secciones son visibles."
 
 #: ../Doc/whatsnew/2.1.rst:628
-#, fuzzy
 msgid ""
 "The PyXML package has gone through a few releases since Python 2.0, and "
 "Python 2.1 includes an updated version of the :mod:`xml` package.  Some of "
@@ -1195,7 +1154,6 @@ msgstr ""
 "SAX, DOM, y el módulo :mod:`minidom`."
 
 #: ../Doc/whatsnew/2.1.rst:634
-#, fuzzy
 msgid ""
 "Ping also contributed another hook for handling uncaught exceptions. :func:"
 "`sys.excepthook` can be set to a callable object.  When an exception isn't "
@@ -1206,17 +1164,16 @@ msgid ""
 "frames, but also lists the function arguments and the local variables for "
 "each frame."
 msgstr ""
-"Ping también contribuyó con otro gancho para el manejo de excepciones no "
-"capturadas. :func:`sys.excepthook` puede ser establecido a un objeto "
-"llamable. Cuando una excepción no es capturada por ningún bloque :keyword:"
-"`try`...`except`, la excepción será pasada a :func:`sys.excepthook`, que "
-"puede entonces hacer lo que quiera. En la Novena Conferencia de Python, Ping "
-"demostró una aplicación para este gancho: imprimir un rastreo extendido que "
-"no sólo lista los marcos de la pila, sino que también lista los argumentos "
-"de la función y las variables locales para cada marco."
+"Ping también contribuyó con otro gancho para manejar excepciones no "
+"detectadas. :func:`sys.excepthook` se puede configurar como un objeto "
+"invocable. Cuando una excepción no es detectada por ningún bloque :keyword:"
+"`try`...\\ :keyword:`except`, la excepción se pasará a :func:`sys."
+"excepthook`, que puede hacer lo que quiera. En la Novena Conferencia de "
+"Python, Ping demostró una aplicación para este gancho: imprimir un rastreo "
+"extendido que no solo enumera los marcos de la pila, sino que también "
+"enumera los argumentos de la función y las variables locales para cada marco."
 
 #: ../Doc/whatsnew/2.1.rst:642
-#, fuzzy
 msgid ""
 "Various functions in the :mod:`time` module, such as :func:`asctime` and :"
 "func:`localtime`, require a floating point argument containing the time in "
@@ -1242,7 +1199,6 @@ msgid "This change was proposed and implemented by Thomas Wouters."
 msgstr "Este cambio fue propuesto y aplicado por Thomas Wouters."
 
 #: ../Doc/whatsnew/2.1.rst:653
-#, fuzzy
 msgid ""
 "The :mod:`ftplib` module now defaults to retrieving files in passive mode, "
 "because passive mode is more likely to work from behind a firewall.  This "
@@ -1272,7 +1228,6 @@ msgstr ""
 "mod:`socket`, aportado por Grant Edwards."
 
 #: ../Doc/whatsnew/2.1.rst:665
-#, fuzzy
 msgid ""
 "The :mod:`pstats` module now contains a simple interactive statistics "
 "browser for displaying timing profiles for Python programs, invoked when the "
@@ -1284,7 +1239,6 @@ msgstr ""
 "Raymond."
 
 #: ../Doc/whatsnew/2.1.rst:669
-#, fuzzy
 msgid ""
 "A new implementation-dependent function, ``sys._getframe([depth])``, has "
 "been added to return a given frame object from the current call stack. :func:"
@@ -1293,16 +1247,15 @@ msgid ""
 "frame that is *depth* calls below the top of the stack.  For example, ``sys."
 "_getframe(1)`` returns the caller's frame object."
 msgstr ""
-"Se ha añadido una nueva función dependiente de la implementación, ``sys."
-"_getframe([depth])``, para retornar un objeto marco dado de la pila de "
-"llamadas actual. :func:``sys._getframe`` retorna el marco en la parte "
-"superior de la pila de llamadas; si se proporciona el argumento entero "
-"opcional *depth*, la función retorna el marco que está *depth* llama por "
-"debajo de la parte superior de la pila. Por ejemplo, ``sys._getframe(1)`` "
-"retorna el objeto frame de la llamada."
+"Se ha agregado una nueva función dependiente de la implementación, ``sys."
+"_getframe([depth])``, para devolver un objeto de marco determinado de la "
+"pila de llamadas actual. :func:`sys._getframe` devuelve el marco en la parte "
+"superior de la pila de llamadas; si el argumento de entero opcional *depth* "
+"is supplied, the function returns the frame that is *depth* llama debajo de "
+"la parte superior de la pila. Por ejemplo, ``sys._getframe(1)`` devuelve el "
+"objeto de trama de la persona que llama."
 
 #: ../Doc/whatsnew/2.1.rst:676
-#, fuzzy
 msgid ""
 "This function is only present in CPython, not in Jython or the .NET "
 "implementation.  Use it for debugging, and resist the temptation to put it "
@@ -1317,7 +1270,6 @@ msgid "Other Changes and Fixes"
 msgstr "Otros cambios y correcciones"
 
 #: ../Doc/whatsnew/2.1.rst:686
-#, fuzzy
 msgid ""
 "There were relatively few smaller changes made in Python 2.1 due to the "
 "shorter release cycle.  A search through the CVS change logs turns up 117 "
@@ -1330,7 +1282,6 @@ msgstr ""
 "ambas cifras estén subestimadas. Algunos de los cambios más notables son:"
 
 #: ../Doc/whatsnew/2.1.rst:691
-#, fuzzy
 msgid ""
 "A specialized object allocator is now optionally available, that should be "
 "faster than the system :func:`malloc` and have less memory overhead.  The "
@@ -1349,7 +1300,6 @@ msgstr ""
 "file:`Objects/obmalloc.c` para los detalles de la implementación."
 
 #: ../Doc/whatsnew/2.1.rst:698
-#, fuzzy
 msgid ""
 "Authors of C extension modules should test their code with the object "
 "allocator enabled, because some incorrect code may break, causing core dumps "
@@ -1384,7 +1334,6 @@ msgid "The object allocator was contributed by Vladimir Marangozov."
 msgstr "El asignador de objetos fue aportado por Vladimir Marangozov."
 
 #: ../Doc/whatsnew/2.1.rst:713
-#, fuzzy
 msgid ""
 "The speed of line-oriented file I/O has been improved because people often "
 "complain about its lack of speed, and because it's often been used as a "
@@ -1406,7 +1355,6 @@ msgstr ""
 "codificación de este cambio, motivado por una discusión en comp.lang.python."
 
 #: ../Doc/whatsnew/2.1.rst:722
-#, fuzzy
 msgid ""
 "A new module and method for file objects was also added, contributed by Jeff "
 "Epler. The new method, :meth:`xreadlines`, is similar to the existing :func:"
@@ -1433,7 +1381,6 @@ msgstr ""
 "org/pipermail/python-dev/2001-January/."
 
 #: ../Doc/whatsnew/2.1.rst:736
-#, fuzzy
 msgid ""
 "A new method, :meth:`popitem`, was added to dictionaries to enable "
 "destructively iterating through the contents of a dictionary; this can be "
@@ -1453,7 +1400,6 @@ msgstr ""
 "de Moshe Zadka."
 
 #: ../Doc/whatsnew/2.1.rst:744
-#, fuzzy
 msgid ""
 "Modules can now control which names are imported when ``from module import "
 "*`` is used, by defining an ``__all__`` attribute containing a list of names "
@@ -1480,7 +1426,6 @@ msgstr ""
 "versión final más débil fue revisada."
 
 #: ../Doc/whatsnew/2.1.rst:758
-#, fuzzy
 msgid ""
 "Applying :func:`repr` to strings previously used octal escapes for non-"
 "printable characters; for example, a newline was ``'\\012'``.  This was a "
@@ -1508,7 +1453,6 @@ msgstr ""
 "compilador realizada por Jeremy Hylton."
 
 #: ../Doc/whatsnew/2.1.rst:769
-#, fuzzy
 msgid ""
 "C extensions which import other modules have been changed to use :func:"
 "`PyImport_ImportModule`, which means that they will use any import hooks "
