--- a/whatsnew/3.8.po
+++ b/whatsnew/3.8.po
@@ -11,12 +11,12 @@ msgstr ""
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
 "PO-Revision-Date: 2021-08-16 23:07+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es_ES\n"
 "Language-Team: \n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: es_ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../Doc/whatsnew/3.8.rst:3
@@ -277,6 +277,13 @@ msgid ""
 "configure --with-trace-refs <--with-trace-refs>` build option. (Contributed "
 "by Victor Stinner in :issue:`36465`.)"
 msgstr ""
+"Las versiones de versiones y :ref:`debug builds <debug-build>` ahora son "
+"compatibles con ABI: definir la macro ``Py_DEBUG`` ya no implica la macro "
+"``Py_TRACE_REFS``, que presenta la única incompatibilidad ABI. La macro "
+"``Py_TRACE_REFS``, que agrega la función :func:`sys.getobjects` y la "
+"variable de entorno :envvar:`PYTHONDUMPREFS`, se puede configurar utilizando "
+"la nueva opción de compilación :option:`./configure --with-trace-refs <--"
+"with-trace-refs>`. (Contribuido por Victor Stinner en :issue:`36465`.)"
 
 #: ../Doc/whatsnew/3.8.rst:222
 msgid ""
@@ -582,16 +589,15 @@ msgid "PEP 590: Vectorcall: a fast calling protocol for CPython"
 msgstr "PEP 590: Vectorcall: un protocolo de llamada rápida para CPython"
 
 #: ../Doc/whatsnew/3.8.rst:352
-#, fuzzy
 msgid ""
 ":ref:`vectorcall` is added to the Python/C API. It is meant to formalize "
 "existing optimizations which were already done for various classes. Any :ref:"
 "`static type <static-types>` implementing a callable can use this protocol."
 msgstr ""
-":ref:`vectorcall` se agrega a la API de Python/C. Está destinado a "
+":ref:`vectorcall` se agrega a la API de Python / C. Está destinado a "
 "formalizar las optimizaciones existentes que ya se realizaron para varias "
-"clases. Cualquier tipo estático que implemente un invocable puede utilizar "
-"este protocolo."
+"clases. Cualquier :ref:`static type <static-types>` que implemente un "
+"invocable puede utilizar este protocolo."
 
 #: ../Doc/whatsnew/3.8.rst:358
 msgid ""
@@ -1462,18 +1468,17 @@ msgid "io"
 msgstr "io"
 
 #: ../Doc/whatsnew/3.8.rst:908
-#, fuzzy
 msgid ""
 "In development mode (:option:`-X` ``env``) and in :ref:`debug build <debug-"
 "build>`, the :class:`io.IOBase` finalizer now logs the exception if the "
 "``close()`` method fails. The exception is ignored silently by default in "
 "release build. (Contributed by Victor Stinner in :issue:`18748`.)"
 msgstr ""
-"En el modo de desarrollo (:option:`-X` ``env``) y en la compilación de "
-"depuración, el finalizador :class:`io.IOBase` ahora registra la excepción si "
-"falla el método ``close()``. La excepción se ignora silenciosamente de forma "
-"predeterminada en la compilación de lanzamiento. (Contribución de Victor "
-"Stinner en :issue:`18748`.)"
+"En el modo de desarrollo (:option:`-X` ``env``) y en :ref:`debug build "
+"<debug-build>`, el finalizador :class:`io.IOBase` ahora registra la "
+"excepción si falla el método ``close()``. La excepción se ignora de forma "
+"silenciosa de forma predeterminada en la versión de la versión. (Contribuido "
+"por Victor Stinner en :issue:`18748`.)"
 
 #: ../Doc/whatsnew/3.8.rst:915
 msgid "itertools"
@@ -3734,9 +3739,8 @@ msgstr ""
 "código gestionado."
 
 #: ../Doc/whatsnew/3.8.rst:2044
-#, fuzzy
 msgid ":ref:`Statically allocated types <static-types>` are not affected."
-msgstr "Los tipos asignados estáticamente no se ven afectados."
+msgstr ":ref:`Statically allocated types <static-types>` no se ve afectado."
 
 #: ../Doc/whatsnew/3.8.rst:2046
 msgid ""
@@ -4005,7 +4009,6 @@ msgstr ""
 "Adam Goldschmidt, Senthil Kumaran y Ken Jin en :issue:`42967`.)"
 
 #: ../Doc/whatsnew/3.8.rst:2253
-#, fuzzy
 msgid "Notable changes in Python 3.8.12"
 msgstr "Cambios notables en Python 3.8.1"
 
@@ -4018,12 +4021,20 @@ msgid ""
 "glibc implementation of modern :func:`~socket.inet_pton` does not accept any "
 "leading zeros."
 msgstr ""
+"A partir de Python 3.8.12, el módulo :mod:`ipaddress` ya no acepta ceros a "
+"la izquierda en las cadenas de direcciones IPv4. Los ceros iniciales son "
+"ambiguos y algunas bibliotecas los interpretan como notación octal. Por "
+"ejemplo, la función heredada :func:`socket.inet_aton` trata los ceros "
+"iniciales como notación octal. La implementación glibc del :func:`~socket."
+"inet_pton` moderno no acepta ceros a la izquierda."
 
 #: ../Doc/whatsnew/3.8.rst:2262
 msgid ""
 "(Originally contributed by Christian Heimes in :issue:`36384`, and "
 "backported to 3.8 by Achraf Merzouki.)"
 msgstr ""
+"(Contribuido originalmente por Christian Heimes en :issue:`36384`, y "
+"actualizado a 3.8 por Achraf Merzouki)."
 
 #~ msgid "Python 3.8 was released on October 14th, 2019."
 #~ msgstr "Python 3.8 fue lanzado el 14 de octubre de 2019."
