finalizando archivo ya arreglando problemas pospell

--- a/tutorial/controlflow.po
+++ b/tutorial/controlflow.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-10-20 00:01+0100\n"
+"PO-Revision-Date: 2021-12-08 23:12+0100\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
@@ -20,7 +20,7 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
-"X-Generator: Poedit 2.3\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/tutorial/controlflow.rst:5
 msgid "More Control Flow Tools"
@@ -346,7 +346,7 @@ msgid ""
 msgstr ""
 "Si estás usando clases para estructurar tus datos, puedes usar el nombre de "
 "la clase seguida de una lista de argumentos similar a la de un constructor, "
-"pero con la capacidad de capturar atributos en variables."
+"pero con la capacidad de capturar atributos en variables::"
 
 #: ../Doc/tutorial/controlflow.rst:324
 msgid ""
@@ -413,7 +413,7 @@ msgid ""
 msgstr ""
 "Al igual que las asignaciones con desempaquetado, los patrones de lista o "
 "tupla tienen el mismo significado y en realidad coinciden con cualquier "
-"sequencia. Una excepción importante es que no coinciden ni con iteradores ni "
+"secuencia. Una excepción importante es que no coinciden ni con iteradores ni "
 "con cadenas de caracteres."
 
 #: ../Doc/tutorial/controlflow.rst:373
@@ -423,7 +423,7 @@ msgid ""
 "also be ``_``, so ``(x, y, *_)`` matches a sequence of at least two items "
 "without binding the remaining items."
 msgstr ""
-"Los patrones de sequencia soportan desempaquetado extendido: ``[x, y, "
+"Los patrones de secuencia soportan desempaquetado extendido: ``[x, y, "
 "*otros]`` and ``(x, y, *otros)`` funcionan de manera similar a las "
 "asignaciones con desempaquetado.  El nombre luego de ``*`` también puede ser "
 "``_``, con lo cual ``(x, y, *_)`` coincide con cualquier secuencia de al "
@@ -436,15 +436,15 @@ msgid ""
 "sequence patterns, extra keys are ignored.  An unpacking like ``**rest`` is "
 "also supported.  (But ``**_`` would be redundant, so it not allowed.)"
 msgstr ""
-"Los patrones de mapeo: ``{\"ancho de banda\": c, \"latencia\": l}`` capturan los "
-"valores ``\"ancho de banda\"`` y ``\"latencia\"`` de un diccionario.  A "
-"diferencia de los patrones de sequencia, las claves adicionales en el sujeto "
+"Los patrones de mapeo: ``{\"ancho de banda\": c, \"latencia\": l}`` capturan "
+"los valores ``\"ancho de banda\"`` y ``\"latencia\"`` de un diccionario.  A "
+"diferencia de los patrones de secuencia, las claves adicionales en el sujeto "
 "son ignoradas.  Puede usarse un desempaquetado como ``**rest`` .  (Aunque "
 "``**_`` sería redundante, con lo cual no está permitido)"
 
 #: ../Doc/tutorial/controlflow.rst:383
 msgid "Subpatterns may be captured using the ``as`` keyword::"
-msgstr "Pueden capturarse subpatrones usando la palabra clave ``as``"
+msgstr "Pueden capturarse subpatrones usando la palabra clave ``as``::"
 
 #: ../Doc/tutorial/controlflow.rst:387
 msgid ""
