Apply suggestions from code review

--- a/c-api/init.po
+++ b/c-api/init.po
@@ -348,8 +348,8 @@ msgid ""
 msgstr ""
 "Si la bandera no es cero, utilice la codificación ``mbcs`` con el gestor de "
 "errores ``replace`` en lugar de la codificación UTF-8 con el gestor de error "
-"``surrogatepass``, para la :term:`codificación del sistema de archivos y "
-"gestor de errores`."
+"``surrogatepass``, para la :term:`filesystem encoding and error handler` "
+"(codificación del sistema de archivos y gestor de errores)."
 
 #: ../Doc/c-api/init.rst:158
 msgid ""
@@ -1814,7 +1814,7 @@ msgid ""
 "Return a :term:`strong reference`. Return ``NULL`` if no frame is currently "
 "executing."
 msgstr ""
-"Retorna una :term:`referencia sólida`. Retorna ``NULL`` si no se está "
+"Retorna una :term:`strong reference` (referencia sólida). Retorna ``NULL`` si no se está "
 "ejecutando ningún cuadro."
 
 #: ../Doc/c-api/init.rst:1119
