arreglando problemas CI

--- a/c-api/init.po
+++ b/c-api/init.po
@@ -1814,8 +1814,8 @@ msgid ""
 "Return a :term:`strong reference`. Return ``NULL`` if no frame is currently "
 "executing."
 msgstr ""
-"Retorna una :term:`strong reference` (referencia sólida). Retorna ``NULL`` si no se está "
-"ejecutando ningún cuadro."
+"Retorna una :term:`strong reference` (referencia sólida). Retorna ``NULL`` "
+"si no se está ejecutando ningún cuadro."
 
 #: ../Doc/c-api/init.rst:1119
 msgid "See also :c:func:`PyEval_GetFrame`."
