traduccion-howto/functional (#1565)
* traduccion-howto/functional
* Update howto/functional.po
* powrap

Co-authored-by: Cristián Maureira-Fredes <Cristian.Maureira-Fredes@qt.io>

--- a/howto/functional.po
+++ b/howto/functional.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-03-18 13:21-0300\n"
+"PO-Revision-Date: 2021-10-22 10:38-0500\n"
 "Last-Translator: Kevin Cajachuán <kevincajachuan@hotmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/howto/functional.rst:3
 msgid "Functional Programming HOWTO"
@@ -188,6 +189,13 @@ msgid ""
 "their side effects of sending some text to the screen or pausing execution "
 "for a second."
 msgstr ""
+"Algunos lenguajes son demasiado estrictos y ni siquiera tienen declaraciones "
+"de asignación como ``a=3`` o ``c = a + b``, pero es difícil evitar todos los "
+"efectos secundarios, como imprimir en pantalla o escribir en un archivo de "
+"disco. Otro ejemplo es llamar a las funciones :func:`print` o :func:`time."
+"sleep`, ninguna de las dos retorna un valor útil, ambas son llamadas solo "
+"por sus efectos secundarios de enviar texto a la pantalla o pausar la "
+"ejecución por un segundo."
 
 #: ../Doc/howto/functional.rst:73
 msgid ""
