Traduciendo entradas faltante de algunos archivos whatsnew

--- a/whatsnew/3.6.po
+++ b/whatsnew/3.6.po
@@ -1602,6 +1602,10 @@ msgid ""
 "mod:`typing` module as :class:`typing.ContextManager`. (Contributed by Brett "
 "Cannon in :issue:`25609`.)"
 msgstr ""
+"El :class:`contextlib.AbstractContextManagerASDF00enter__()` que devuelve `` "
+"self`` and leaves `__exit __ () `un método abstracto. Se ha agregado una "
+"clase coincidente al módulo :mod:`typing` como :class:`typing."
+"ContextManager`. (Contribuido por Brett Cannon en :issue:`25609`.)"
 
 #: ../Doc/whatsnew/3.6.rst:971
 msgid "datetime"
@@ -2984,6 +2988,10 @@ msgid ""
 "`warnings.WarningMessage` (contributed by Victor Stinner in :issue:`26568` "
 "and :issue:`26567`)."
 msgstr ""
+"También se ha agregado un nuevo atributo opcional *source* parameter has "
+"been added to the ASDF00 function: the destroyed object which emitted a "
+"ASDF02. A *source* a :class:`warnings.WarningMessage` (aportado por Victor "
+"Stinner en :issue:`26568` y :issue:`26567`)."
 
 #: ../Doc/whatsnew/3.6.rst:1703
 msgid ""
