--- a/whatsnew/3.3.po
+++ b/whatsnew/3.3.po
@@ -14,10 +14,10 @@ msgstr ""
 "PO-Revision-Date: 2021-10-29 22:00-0500\n"
 "Last-Translator: Pedro Aarón <p.luis.aaron@gmail.com>\n"
 "Language-Team: python-doc-es\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: es\n"
 "X-Generator: Poedit 2.4.2\n"
 
 #: ../Doc/whatsnew/3.3.rst:3
@@ -4797,6 +4797,10 @@ msgid ""
 "out of range. :exc:`OSError` is now raised if C functions :c:func:`gmtime` "
 "or :c:func:`localtime` failed."
 msgstr ""
+":issue:`13847`, :issue:`14180`: :mod:`time` y :mod:`datetime`: :exc:"
+"`OverflowError` ahora se eleva en lugar de :exc:`ValueError` si una marca de "
+"tiempo está fuera de rango. :exc:`OSError` ahora se genera si fallaron las "
+"funciones C :c:func:`gmtime` o :c:func:`localtime`."
 
 #: ../Doc/whatsnew/3.3.rst:2359
 msgid ""
