--- a/whatsnew/3.4.po
+++ b/whatsnew/3.4.po
@@ -12,15 +12,14 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Claudia Millan\n"
+"Last-Translator: Claudia Millan <clmilneb@gmail.com>\n"
 "Language-Team: python-doc-es\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.8.0\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"Last-Translator: Claudia Millan <clmilneb@gmail.com>\n"
-"Language: es\n"
+"Generated-By: Babel 2.8.0\n"
 "X-Generator: Poedit 3.0\n"
 
 #: ../Doc/whatsnew/3.4.rst:3
@@ -1657,7 +1656,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.4.rst:893
 msgid "glob"
-msgstr ""
+msgstr "glob"
 
 #: ../Doc/whatsnew/3.4.rst:895
 msgid ""
